# GEMstack

./: .gitignore  Documentation.md  HOMEWORK.md  LICENSE  LidarFilter.py  PointCloudFilter.py  PointCloudReceiverSync.py  README.md  ROS2_checklist.md  SensorFusion.py  TestTransfrom.py  blink.py  blink2.py  camera_feature_extract.py  clear_logs.sh  extra_steps  extrinsics.npz  gnss_log.txt  highbay_image_with_cones.pgm  hybrid_a_star.md  imu_ouster.txt  imustate.txt  lane_points.txt  launching_instructions  lidar_feature_extract.py  log.txt  main.py  new_extrinsic.txt  occupancy_grid_after_>0.pgm  output_point_cloud.ply  package.xml  pedestrian_detection.py  person_detector.py  pyproject.toml  record0430.txt  requirements.txt  roadgraph_generator.py  roadgraph_lane_points.txt  roadgraph_lane_reader.py  run_docker_container.sh  (+12 more)
.github/: CODEOWNERS
2025-02-18_11-01-55/: PurePursuitTrajectoryTracker_debug.csv  behavior.json  meta.yaml  settings.yaml
Agent-Planning/: README.md  requirements.txt
Fusion/: ClickPoints.py  DistortionRemove.py  FindParkingLot.py  FindRectangle.py  SubImagePubPointCloudNode.py  document.md  getImageFromRosbag.py  imagePublisher.py  readImageFromRosbag.py  stitch.py  test.py
GEMstack/: __init__.py  blink.py  blink2.py  gem_hardware.py  person_detector.py  visualize_trajectories.ipynb  visualize_trajectories_lines.ipynb
HW1/: blink.py
HW2/: pedestrian_detection.py  person_detector.py
MLops/: record_rosbag.py
api-service/: main.py
app/: E2E_test.py
archive/: agent_detection.py  test_lane_detection.py
config/: settings.yaml
data/: .gitignore  README.md  cameraIncrinsics.txt  camera_info.txt  depth1.tif  depth3.tif  (+6 more)
testing/perception/sensorFusionTesting/pointpillars_ros/: CmakeLists.txt  package.xml  readme.md
(+2663 files in other folders)
